# sdk-for-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: publish.yml
docs/examples/account/: create-anonymous-session.md  create-email-password-session.md  create-email-token.md  create-email-verification.md  create-jwt.md  get.md  (+39 more)
src/: client.rs  error.rs  id.rs  input_file.rs  lib.rs  permission.rs  query.rs  role.rs
src/enums/: adapter.rs  attribute_status.rs  authentication_factor.rs  authenticator_type.rs  backup_services.rs  browser.rs  browser_permission.rs  build_runtime.rs  column_status.rs  compression.rs  credit_card.rs  database_type.rs  databases_index_type.rs  deployment_download_type.rs  deployment_status.rs  execution_method.rs  execution_status.rs  execution_trigger.rs  flag.rs  framework.rs  health_antivirus_status.rs  health_check_status.rs  image_format.rs  image_gravity.rs  index_status.rs  index_type.rs  message_priority.rs  message_status.rs  messaging_provider_type.rs  mod.rs  name.rs  o_auth_provider.rs  order_by.rs  password_hash.rs  platform_type.rs  protocol_id.rs  relation_mutate.rs  relationship_type.rs  runtime.rs  scopes.rs  (+7 more)
src/models/: activity_event.rs  activity_event_list.rs  algo_argon2.rs  algo_bcrypt.rs  algo_md5.rs  algo_phpass.rs  algo_scrypt.rs  algo_scrypt_modified.rs  algo_sha.rs  attribute_boolean.rs  attribute_datetime.rs  attribute_email.rs  attribute_enum.rs  attribute_float.rs  attribute_integer.rs  attribute_ip.rs  attribute_line.rs  attribute_list.rs  attribute_longtext.rs  attribute_mediumtext.rs  attribute_point.rs  attribute_polygon.rs  attribute_relationship.rs  attribute_string.rs  attribute_text.rs  attribute_url.rs  attribute_varchar.rs  auth_provider.rs  backup_archive.rs  backup_archive_list.rs  backup_policy.rs  backup_policy_list.rs  backup_restoration.rs  backup_restoration_list.rs  billing_limits.rs  block.rs  bucket.rs  bucket_list.rs  collection.rs  collection_list.rs  (+116 more)
src/services/: account.rs  activities.rs  avatars.rs  backups.rs  databases.rs  functions.rs  graphql.rs  health.rs  locale.rs  messaging.rs  mod.rs  project.rs  sites.rs  storage.rs  tables_db.rs  teams.rs  tokens.rs  users.rs  webhooks.rs
tests/: tests.rs
(+399 files in other folders)
