[package]
name = "appwrite"
version = "0.3.0"
edition = "2021"
rust-version = "1.83"
authors = ["appwrite"]
description = "Appwrite SDK for Rust"
documentation = "https://docs.rs/appwrite"
repository = "https://github.com/appwrite/sdk-for-rust"
license = "BSD-3-Clause"
keywords = ["appwrite", "sdk", "api", "backend", "baas"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", features = ["json", "multipart", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
indexmap = ">=2, <2.12"
url = ">=2.4.1, <2.5"
mime = "0.3.17"
fastrand = "=2.0.2"
thiserror = "1.0.69"
bytes = "1.11.1"
arc-swap = "1.8.0"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos", target_os = "watchos"))'.dependencies]
security-framework = ">=3, <3.7"

[dev-dependencies]
tokio-test = "=0.4.4"
wiremock = "=0.5.22"

[lib]
name = "appwrite"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
